--- a/docs/_snippets/setup-teams-integration.mdx
+++ b/docs/_snippets/setup-teams-integration.mdx
@@ -36,11 +36,11 @@ Call it `Elementary` (or whatever you prefer) and connect it to the workspace of
 
 Now it's time to set up a webhook. You have two options for creating a webhook:
 
-<Accordion title="Option 1: Create Teams Webhook using Connectors (Legacy)">
+<Accordion title="Option 1: Create Teams Webhook using Connectors">
 
 ## Create a webhook using Connectors
 
-**Note:** Microsoft 365 Connectors are being deprecated. Consider using Power Automate Workflows (Option 2) for new integrations.
+**Note:** Microsoft 365 Connectors are set to be deprecated end of 2025. Consider using Power Automate Workflows (Option 2) for new integrations.
 
 Go to a channel in your Team and choose `Manage channel`
 
@@ -63,6 +63,7 @@ Search for `Incoming webhook` and choose `Add`.
   alt="Teams add incoming webhook"
 />
 
+
 Choose `Add` again and add name your webhook `ElementaryWebhook` (or whatever you prefer). And `Create` the webhook.
 
 <img
@@ -79,7 +80,7 @@ Copy the URL of the webhook.
 
 </Accordion>
 
-<Accordion title="Option 2: Create Teams Webhook using Power Automate (Recommended)">
+<Accordion title="Option 2: Create Teams Webhook using Power Automate (OSS)">
 
 ## Create a webhook using Power Automate
 
