--- a/docs/cloud/integrations/alerts/ms-teams.mdx
+++ b/docs/cloud/integrations/alerts/ms-teams.mdx
@@ -98,11 +98,11 @@ The alerts include rich context, and you can create [alert rules](/features/aler
 
 </Accordion>
 
-<Accordion title="Option 2: Using Power Automate Workflows (Recommended)">
+<Accordion title="Option 2: Using Power Automate Workflows">
 
 You can create a webhook using Power Automate in two ways:
 
-### Method 1: Directly from Teams (Recommended)
+### Method 1: Directly from Teams
 
 1. Go to your Teams channel
 2. Click the three dots (...) next to the channel name
