deleted Slack comparison table

--- a/docs/oss/deployment-and-configuration/teams.mdx
+++ b/docs/oss/deployment-and-configuration/teams.mdx
@@ -12,14 +12,10 @@ There are two ways to create a webhook for Microsoft Teams:
 1. **Microsoft Teams Connectors (Legacy)**: The traditional way of creating webhooks, but this method is being deprecated by Microsoft.
 2. **Power Automate Workflows (Recommended)**: The newer, more flexible way to create webhooks. Note that when using this method, Elementary CLI cannot directly verify if messages were delivered - you'll need to monitor your workflow runs in Power Automate.
 
-Below is a features support comparison table (with Slack), to help you select the integration method.
+<Warning>MS Teams supports Elementary Alerts, but unlike Slack, it does not support the Elementary report or multiple channels.</Warning>
 
-| Integration              | Elementary alerts | Elementary report | Multiple channels |
-| ------------------------ | ----------------- | ----------------- | ----------------- |
-| Teams Connector (Legacy) | ✅                | ❌                | ❌                |
-| Power Automate Workflows | ✅                | ❌                | ❌                |
 
-**Note:** Microsoft 365 Connectors (previously called Office 365 Connectors) are nearing deprecation. We recommend using Power Automate Workflows for new integrations.
+<Warning>Microsoft 365 Connectors (previously called Office 365 Connectors) are nearing deprecation. We recommend using Power Automate Workflows for new integrations.<Warning>
 
 ## Teams integration setup
 
