deleted Slack comparison table

--- a/docs/oss/deployment-and-configuration/teams.mdx
+++ b/docs/oss/deployment-and-configuration/teams.mdx
@@ -15,7 +15,7 @@ There are two ways to create a webhook for Microsoft Teams:
 <Warning>MS Teams supports Elementary Alerts, but unlike Slack, it does not support the Elementary report or multiple channels.</Warning>
 
 
-<Warning>Microsoft 365 Connectors (previously called Office 365 Connectors) are nearing deprecation. We recommend using Power Automate Workflows for new integrations.<Warning>
+<Warning>Microsoft 365 Connectors (previously called Office 365 Connectors) are nearing deprecation. We recommend using Power Automate Workflows for new integrations.</Warning>
 
 ## Teams integration setup
 
