--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -271,25 +271,10 @@ tests:
 
 </CodeGroup>
 
-## Alerts global configuration
-
-#### Enable/disable alerts
-
-You can choose to enable / disable alert types by adding a var to your `dbt_project.yml`.
 
 <Warning>
-  Vars will be deprecated soon! For OSS users, we recommend filtering the alerts
+  Alert vars are deprecated! We recommend filtering the alerts
   using [CLI selectors](/oss/guides/alerts/alerts-configuration#alerts-cli-flags)
   instead.
 </Warning>
 
-Below are the available vars and their default config:
-
-```yml dbt_project.yml
-vars:
-  disable_model_alerts: false
-  disable_test_alerts: false
-  disable_warn_alerts: false
-  disable_skipped_model_alerts: true
-  disable_skipped_test_alerts: true
-```
