deprecate alert vars

--- a/docs/oss/guides/alerts/alerts-configuration.mdx
+++ b/docs/oss/guides/alerts/alerts-configuration.mdx
@@ -7,6 +7,13 @@ sidebarTitle: "Alerts configuration"
 
 ## Alerts CLI flags
 
+<Warning>
+  Alert vars are deprecated! We recommend filtering the alerts
+  using CLI selectors instead.
+</Warning>
+
+
+
 #### Filter alerts
 
 Elementary supports filtering the alerts by tag, owner, model, status or resource type.
