deprecate alert vars

--- a/docs/oss/guides/alerts/alerts-configuration.mdx
+++ b/docs/oss/guides/alerts/alerts-configuration.mdx
@@ -20,9 +20,9 @@ Elementary supports filtering the alerts by tag, owner, model, status or resourc
 
 Using filters, you can send alerts to the relevant people and teams by running `edr` multiple times with different filters on each run.
 
-<Warning>
-alerts on skipped tests and models are filtered out by default. if you want to receive those alerts, apply the statuses filter and include them explicitly.
-</Warning>
+<Info>
+Alerts on skipped tests and models are filtered out by default. if you want to receive those alerts, apply the statuses filter and include them explicitly.
+</Info>
 
 <CodeGroup>
 
