add critical assets 1

--- a/docs/features/data-governance/critical_assets.mdx
+++ b/docs/features/data-governance/critical_assets.mdx
@@ -8,6 +8,9 @@ A critical asset is any data asset (such as a model, exposure, or report) that
 
 Marking an asset as **critical** ensures it receives **higher priority in monitoring and alerting**, helping you quickly identify and respond to issues that may impact it.
 
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1740054762/u2rcaavqxmaa2ctg09wz.png" />
+
+
 ## **What Should Be Set as a Critical Asset?**
 
 You should mark an asset as **critical** if:
