add critical assets video

--- a/docs/features/data-governance/critical_assets.mdx
+++ b/docs/features/data-governance/critical_assets.mdx
@@ -38,6 +38,15 @@ You can mark an asset as **critical** directly in the UI:
 
 Once an asset is marked as critical, **alerts will now highlight any issues that may impact this asset or its upstream dependencies, ensuring prioritization.**
 
+<video
+  autoPlay
+  muted
+  loop
+  playsInline
+  className="w-full aspect-video"
+  src="https://res.cloudinary.com/do5hrgokq/video/upload/v1740054626/ytn1zs2r0c0r5btqqnfy.mp4"
+></video>
+
 ## **Where Can You See Critical Assets?**
 
 Once an asset is marked as **critical**, you will be able to:
