critical assets minor change

--- a/docs/features/data-governance/critical_assets.mdx
+++ b/docs/features/data-governance/critical_assets.mdx
@@ -4,7 +4,7 @@ title: "Critical Assets"
 
 ### **What is a Critical Asset?**
 
-A critical asset is any data asset (such as a model, exposure, or report) that plays a crucial role in your company's data ecosystem. Issues affecting these assets can have a significant impact on business operations, dashboards, and decision-making.
+A critical asset is **any data asset (such as a model, exposure, or report) that plays a crucial role in your company's data ecosystem**. Issues affecting these assets can have a significant impact on business operations, dashboards, and decision-making.
 
 Marking an asset as **critical** ensures it receives **higher priority in monitoring and alerting**, helping you quickly identify and respond to issues that may impact it.
 
