add mute tests docs and video

--- a/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -25,6 +25,18 @@ you will be able to track all open and historical incidents, and get metrics on 
 - **Incidents management** - When alerts are distributed to different channels, it can become hard to track what is open. Elementary offers a centralized Incidents page to monitor what is open, and manage incident properties: **assignee**, **status** and **severity**.  
 - **Grouping alerts to incidents** - New failures related to already open incidents will not trigger new alerts, and will be automatically added to the opgoing incident. This reduces noise and alerts fatigue.  
 - **Automated resolution** - When there is a successful run that means an open incident is resolved, Elementary will automatically resolve the incident. This will help you manage the state of incidents and communicate it to stake holders in real time. 
+- **Mute test alerts** – Mute your test from the test configuration tab to run tests without triggering alerts, giving you more control over notifications while still monitoring data quality. This is useful when testing new data sets, refining thresholds, or adjusting test logic without unnecessary noise.
+
+<video
+  autoPlay
+  muted
+  loop
+  playsInline
+  className="w-full aspect-video"
+  src="https://res.cloudinary.com/do5hrgokq/video/upload/v1740054630/ejjbnlfpbszhctij7ugy.mp4"
+></video>
+
+
 
 ## Alert types
 
