Remove month headers and add month tags instead

--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -3,13 +3,25 @@ title: Elementary Changelog
 description: "See what's new on the Elementary Cloud Platform"
 ---
 
-## July 2024
-
-### Introducing: Incident Management
+## Introducing: Incident Management
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >July 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -57,11 +69,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
   </div>
 </div>
 
-### New Alert Integrations!
+## New Alert Integrations!
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+        <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >July 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -93,13 +119,26 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
   </div>
 </div>
 
-## May 2024
 
-### Add any dbt test via UI
+## Add any dbt test via UI
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >May 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -156,11 +195,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
     </div>
 </div>
 
-### Column anomalies by dimensions
+## Column anomalies by dimensions
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >May 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -208,11 +261,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-### Column level test results in lineage
+## Column level test results in lineage
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+        <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >May 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -254,11 +321,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-### Monitor test durations
+## Monitor test durations
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+        <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >May 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -319,11 +400,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-### Sync now
+## Sync now
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+        <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >May 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -366,13 +461,26 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-## April 2024
 
-### Status and assignee for alerts
+## Status and assignee for alerts
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >April 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -410,11 +518,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 </div>
 </div>
 
-### Custom SQL tests in UI
+## Custom SQL tests in UI
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >April 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -449,11 +571,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-### Model runs in dashboard
+## Model runs in dashboard
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >April 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -488,11 +624,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-### DAG subset in Lineage
+## DAG subset in Lineage
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >April 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
@@ -528,11 +678,25 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
 
 </div>
 
-### Role-based access control
+## Role-based access control
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
         <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#6b6b6b",
+                color: "#ffffff",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                marginRight: "6px"
+                }}
+            >April 2024</span>
             <span
                 style={{ 
                 background: "#FECDD8",
